# learning-developement-using-agent-factory

./: LEARNING_ROADMAP.md  SKILL_UPDATE_SUMMARY.md  agent_copy.py
.claude/: settings.local.json
Chapter_40_FastAPI_for_Agents/: Dockerfile  (+2 more)
ai-todo-app/: .env.example  .gitignore  agent.py  custom_server_mcp.py  main.py  pyproject.toml  temp_agent.py
ai-todo-app/app/core/: config.py
ai-todo-app/app/database/: session.py
ai-todo-app/app/models/: todo.py
ai-todo-app/app/routers/: todo.py
ai-todo-app/app/schemas/: todo.py
ai-todo-app/app/services/: agent_service.py  todo.py
ai-todo-app/app/utils/: agent_lib.py
fastapi/: README.md  SETUP.md  chatgpt.py  docker-compose.yml  main.py  practice.py  pyproject.toml  test_main.py  verify_api.py
fastapi/core/: config.py
fastapi/db/: engine.py  init_db.py
fastapi/models/: student.py
fastapi/repositories/: student_repo.py
fastapi/routers/: students.py
fastapi/services/: std_service.py  student_service.py
fastapi/topics/: annotated.py  query.py
learning_auth/: .env  .env.example  .gitignore  local.db  main.py  pyproject.toml  test_core.py
learning_auth/core/: auth.py  config.py  cookies.py  database.py  jwt.py  rate_limit.py  security.py
learning_auth/models/: user.py
learning_auth/routers/: auth.py
refine-fastapi-builder/: .env.example  .gitignore  pyproject.toml
refine-fastapi-builder/app/: config.py  main.py  middleware.py
refine-fastapi-builder/app/api/: dependencies.py
refine-fastapi-builder/app/api/v1/: api.py
refine-fastapi-builder/app/api/v1/endpoints/: auth.py  courses.py  enrollments.py  students.py
refine-fastapi-builder/app/core/: database.py  logging.py  security.py
refine-fastapi-builder/app/models/: course.py  enrollment.py  student.py  user.py
refine-fastapi-builder/app/repositories/: course_repo.py  enrollment_repo.py  student_repo.py  user_repo.py
refine-fastapi-builder/app/schemas/: course.py  enrollment.py  student.py  user.py
refine-fastapi-builder/app/services/: auth_service.py  course_service.py  enrollment_service.py  student_service.py
refine-fastapi-builder/app/utils/: rate_limit.py
refine-fastapi-builder/tests/: conftest.py
sqlmodel-learning/: .env  main.py  pyproject.toml
sqlmodel-learning/src/: config.py  database.py  models.py
student-management-system/: .env  main.py  pyproject.toml  sync_vs_async_example.py
student-management-system/core/: config.py
student-management-system/db/: engine.py  init_db.py
student-management-system/models/: auth_model.py  course_model.py  student_model.py
student-management-system/repositories/: course_repo.py  student_repo.py
student-management-system/routers/: auth_router.py  course_router.py  student_router.py
student-management-system/services/: auth_service.py  course_service.py  student_service.py
student-management-system/utils/: get_auth.py  hash_lib.py  jwt_lib.py
(+170 files in other folders)
