[project]
name = "sqlmodel-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2[binary]>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.13.0",
    "pydantic[email]>=2.12.5",
    "sqlmodel>=0.0.34",
]
